[package]
name = "bilibili_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11.22", features = ["json"] }
reqwest_cookie_store = "0.6.0"
chrono = "0.4.31"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
md-5 = "0.10.6"
lazy_static = "1.4.0"
rsa = { version = "0.9.4", features = ["sha2"] }
rand = "0.8.5"
select = "0.6.0"
qrcode = "0.12.0"
